Fix contrast for accessibility

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,4 +1,4 @@
-$blue: #407ea7;
+$blue: #407e98;
 $light-blue: #2A8194;
 $dark-blue: #1f2b50;
 $lighter-blue: #D6F0FF;
